fixed annoying horizontal scroll for what ever reason
table cell needed a min width and magically fixed annoying horizontal scroll for whole page

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  outline: 1px solid #f00 !important;
 }
 
 p {
@@ -8,10 +9,14 @@ p {
 body {
   width: 100vw;
   height: 100vw;
+  margin: 0;
 }
 
 @media screen and (min-width: 1024px) {
   p {
     font-size: 1rem;
+  }
+  body {
+    overflow-x: hidden;
   }
 }
